test/rules/fail/rexcept_oracle_01.zc.fail
Fatal error: exception Failure("wf_exp: Variable y undefined in y")
